--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>   <!-- creates the BODY of the HTML file-->
        <header>   <!-- This is a specially named section-->
-       <h1>Ugly Dogs</h1> 
-       <h2>The World's Ugliest Dogs</h2>   
+       <h1>Homework for Zeke's Class</h1> 
+       <h2>This will be the webpage I build for Week 3</h2>   
        </header>
        
        <section id="photoSection">
-           The following is a selection of the web's ugliest mutts.
+           Here I will write truly inspiring stuff.
        </section>
        <section id="photoLabels">
           
