--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">   <!--just stuff you gotta put there-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ugly Dogs</title>  <!--title of the page - in bar-->
+    <title>Zeke's Homework Page</title>  <!--title of the page - in bar-->
     <link rel="stylesheet" href="css/styles.css">  <!--adds the css file-->
 </head>
 
