--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <!--this section holds the photos-->
         Here I will write truly inspiring stuff.
 
-        <img>
-        <img>
+        <img src="https://images.app.goo.gl/hafahpY93W8bnKzRA">
+        <img src="https://images.app.goo.gl/eBJxjR1Su2NMyE2Z7">
 
 
     </section>
