--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <!--this section holds the photos-->
         Here I will write truly inspiring stuff.
 
-        <img src="https://images.app.goo.gl/hafahpY93W8bnKzRA">
-        <img src="https://images.app.goo.gl/eBJxjR1Su2NMyE2Z7">
+        <img src="//cdn.cnn.com/cnnnext/dam/assets/150627125003-04-ugliest-dog-0627-exlarge-169.jpg">
+        <img src="https://www.bbcgoodfood.com/sites/default/files/chicken-main_0.jpg">
 
 
     </section>
@@ -42,3 +42,4 @@
 <script src=""></script> <!-- this should point to the JAVASCRIPT file-->
 
 </html>
+
