--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section id="photoSection">
         <!--this section holds the photos-->
-        Here I will write truly inspiring stuff.
+        Here I will write truly inspiring stuff. <br>
 
         <img src="//cdn.cnn.com/cnnnext/dam/assets/150627125003-04-ugliest-dog-0627-exlarge-169.jpg">
         <img src="https://www.bbcgoodfood.com/sites/default/files/chicken-main_0.jpg">
