--- a/index.html
+++ b/index.html
@@ -21,25 +21,21 @@
 
     <section id="photoSection">
         <!--this section holds the photos-->
-        Here I will write truly inspiring stuff. <br>
+        <p id="topic">Here I will write insanely inspiring stuff. </p>
 
-        <img src="//cdn.cnn.com/cnnnext/dam/assets/150627125003-04-ugliest-dog-0627-exlarge-169.jpg">
-        <img src="https://www.bbcgoodfood.com/sites/default/files/chicken-main_0.jpg">
+        <img id="dog1" src="https://preview.redd.it/702vv1xaenqz.jpg?width=960&crop=smart&auto=webp&s=5ca76cdb434b72ce69deedc23712fe72351bd85b">
+        <p id="dogDesc1">This is a dog</p>
+        
+        <img id="chicken1" src="https://www.bbcgoodfood.com/sites/default/files/chicken-main_0.jpg">
+        <p id="chickenDesc1">This is not a dog</p>
 
-
-    </section>
-
-    <section id="photoLabels">
-        <!--this section holds the photo labels-->
-
-        <p>This is a dog</p>
-        <p>This is not a dog</p>
 
     </section>
+
+   
 
 
 </body>
 <script src=""></script> <!-- this should point to the JAVASCRIPT file-->
 
 </html>
-
