--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- This is a specially named section-->
         <h1>Homework for Zeke's Class</h1>
         <h2>This will be the webpage I build for Week 3</h2>
-        <p id="topic">Here I will write insanely inspiring stuff.</p>
+        <p id="topic">Here I will write insanely inspiring stuff</p>
     </header>
 
    
