--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <!-- This is a specially named section-->
         <h1>Scott's Homework for Zeke's Class</h1>
-        <h2>Here are two VERY difficult questions.</h2>
+        <h2>Here are two <span class="bold">VERY</span> difficult questions.</h2>
     </header>
 
 
