--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
     </section>
 
     
+    
 
-
-
+<div id="theClock"></div>
+<script src="app.js"></script> <!-- this should point to the JAVASCRIPT file-->
 </body>
-<script src=""></script> <!-- this should point to the JAVASCRIPT file--></html>
+</html>
